[metadata]
name = sas-airflow-provider
version = 0.0.5
author = SAS
author_email = andrew.shakinovsky@sas.com
description = Enables execution of Studio Flows and Jobs from Airflow
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sassoftware/sas-airflow-provider
project_urls =
    Bug Tracker = https://github.com/sassoftware
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src

[options.entry_points]
# this allows Airflow to find our connection provider
apache_airflow_provider=
  provider_info=sas_airflow_provider.__init__:get_provider_info
